--- a/FAIR_universe_Higgs_tautau/config.yml
+++ b/FAIR_universe_Higgs_tautau/config.yml
@@ -2,23 +2,81 @@ Samples:
     - Name              : htautau
       Tree              : tree_htautau
       SamplePath        : saved_datasets/dataset_nominal.root
-      Weight            : weight
+      Weight            : weights
       UseAsReference    : True
       UseAsBasis        : True
 
     - Name              : ttbar
       Tree              : tree_ttbar
       SamplePath        : saved_datasets/dataset_nominal.root
-      Weight            : weight
+      Weight            : weights
       UseAsReference    : True
       UseAsBasis        : True
         
     - Name : ztautau
       Tree              : tree_ztautau
       SamplePath        : saved_datasets/dataset_nominal.root
-      Weight            : weight
+      Weight            : weights
       UseAsReference    : False
       UseAsBasis        : True
+
+Systematics:
+    -   Name                : JES
+        Type                : NormPlusShape
+        Up                  :
+            -   SampleName        : htautau
+                Path              : saved_datasets/dataset_JES_up.root
+                Tree              : tree_htautau
+                Weight            : weights
+            -   SampleName        : ztautau
+                Path              : saved_datasets/dataset_JES_up.root
+                Tree              : tree_ztautau
+                Weight            : weights
+            -   SampleName        : ttbar
+                Path              : saved_datasets/dataset_JES_up.root
+                Tree              : tree_ttbar
+                Weight            : weights
+        Dn                  :
+            -   SampleName        : htautau
+                Path              : saved_datasets/dataset_JES_dn.root
+                Tree              : tree_htautau
+                Weight            : weights
+            -   SampleName        : ztautau
+                Path              : saved_datasets/dataset_JES_dn.root
+                Tree              : tree_ztautau
+                Weight            : weights
+            -   SampleName        : ttbar
+                Path              : saved_datasets/dataset_JES_dn.root
+                Tree              : tree_ttbar
+                Weight            : weights
+    -   Name                : TES
+        Type                : NormPlusShape
+        Up                  :
+            -   SampleName        : htautau
+                Path              : saved_datasets/dataset_TES_up.root
+                Tree              : tree_htautau
+                Weight            : weights
+            -   SampleName        : ztautau
+                Path              : saved_datasets/dataset_TES_up.root
+                Tree              : tree_ztautau
+                Weight            : weights
+            -   SampleName        : ttbar
+                Path              : saved_datasets/dataset_TES_up.root
+                Tree              : tree_ttbar
+                Weight            : weights
+        Dn                  :
+            -   SampleName        : htautau
+                Path              : saved_datasets/dataset_TES_dn.root
+                Tree              : tree_htautau
+                Weight            : weights
+            -   SampleName        : ztautau
+                Path              : saved_datasets/dataset_TES_dn.root
+                Tree              : tree_ztautau
+                Weight            : weights
+            -   SampleName        : ttbar
+                Path              : saved_datasets/dataset_TES_dn.root
+                Tree              : tree_ttbar
+                Weight            : weights
 
 
 TRAINING_FEATURES:
@@ -67,58 +125,34 @@ Regions:
     Variable: null
     Binning: null
     TrainedModels:
-    -   Name: htautau
-        Models: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_nominal/output_model_params_htautau/
-        Ratios: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_nominal/output_ratios_htautau/ratio_htautau.npy
-    -   Name: ttbar
-        Models: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_nominal/output_model_params_ttbar/
-        Ratios: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_nominal/output_ratios_ttbar/ratio_ttbar.npy
-    -   Name: ztautau
-        Models: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_nominal/output_model_params_ztautau/
-        Ratios: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy
-Systematics:
--   Name: TES
-    weight_up: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/df_TES_up.h5
-    weight_dn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/df_TES_dn.h5
-    Type: NormPlusShape
-    Samples:
-        - htautau
-        - ztautau
-        - ttbar
-    TrainedModels:
-    -   Name: htautau
-        ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_htautau_TES_up/
-        RatiosUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_ratios_htautau_TES_up/ratio_TES_up.npy
-        ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_htautau_TES_dn/
-        RatiosDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_ratios_htautau_TES_dn/ratio_TES_dn.npy
-    -   Name: ztautau
-        ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ztautau_TES_up/
-        RatiosUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_ratios_ztautau_TES_up/ratio_TES_up.npy
-        ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ztautau_TES_dn/
-        RatiosDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_ratios_ztautau_TES_dn/ratio_TES_dn.npy
-    -   Name: ttbar
-        ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ttbar_TES_up/
-        RatiosUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_ratios_ttbar_TES_up/ratio_TES_up.npy
-        ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ttbar_TES_dn/
-        RatiosDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_ratios_ttbar_TES_dn/ratio_TES_dn.npy
--   Name: JES
-    weight_up: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/df_JES_up.h5
-    weight_dn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/df_JES_dn.h5
-    Type: NormPlusShape
-    Samples:
-    - htautau
-    - ztautau
-    - ttbar
-    TrainedModels:
-    
-    -   ProcessName: htautau
-        ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_htautau_JES_up/
-        ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_htautau_JES_dn/
-        
-    -   ProcessName: ztautau
-        ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ztautau_JES_up/
-        ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ztautau_JES_dn/
+        - Nominal       :
+            -   SampleName: htautau
+                Models: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_nominal/output_model_params_htautau/
+            -   SampleName: ttbar
+                Models: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_nominal/output_model_params_ttbar/
+            -   SampleName: ztautau
+                Models: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_nominal/output_model_params_ztautau/
+        - Systematics       :
+            -   SystName: TES
+            -   Samples         :
+                -   SampleName: htautau
+                    ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_htautau_TES_up/
+                    ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_htautau_TES_dn/
+                -   SampleName: ztautau
+                    ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ztautau_TES_up/
+                    ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ztautau_TES_dn/
+                -   SampleName: ttbar
+                    ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ttbar_TES_up/
+                    ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ttbar_TES_dn/
+            -   SystName: JES
+            -   Samples         :
+                -   SampleName: htautau
+                    ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_htautau_JES_up/
+                    ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_htautau_JES_dn/
+                -   SampleName: ztautau
+                    ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ztautau_JES_up/
+                    ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ztautau_JES_dn/
+                -   SampleName: ttbar
+                    ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ttbar_JES_up/
+                    ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ttbar_JES_dn/
 
-    -   ProcessName: ttbar
-        ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ttbar_JES_up/
-        ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ttbar_JES_dn/
